--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -11,9 +11,10 @@
     <h1>hello world</h1>
     <center>
         <canvas id="gameArea" width="1024" height="600"></canvas>
+        <script src="main-menu.js"></script>
         <script src="tournament-menu.js"></script>
         <script src="players-board.js"></script>
-        <!-- <script src="main-menu.js"></script> -->
+        <!-- <script src="online-menu.js"></script> -->
     </center>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
