updated: new management for event listeners

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -11,6 +11,7 @@
     <h1>hello world</h1>
     <center>
         <canvas id="gameArea" width="1024" height="600"></canvas>
+        <script src="utils.js"></script>
         <script src="main-menu.js"></script>
         <script src="tournament-menu.js"></script>
         <script src="players-board.js"></script>
