--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.cdnfonts.com/css/irish-grover" rel="stylesheet">
   </head>
-  <body>
+  <body style="background-color: lightslategray;">
     <h1>hello world</h1>
     <center>
         <canvas id="gameArea" width="1024" height="600"></canvas>
@@ -16,7 +16,8 @@
         <script src="tournament-menu.js"></script>
         <script src="players-board.js"></script>
         <script src="online-menu.js"></script>
+        <script src="online-board.js"></script>
     </center>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
-</html>
+  </html>
