fix bug single on player mode

--- a/project/game/index.html
+++ b/project/game/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Pong Game</h1>
-    <canvas id="gameArea" width="800" height="600"></canvas>
+    <center>
+    <canvas id="gameArea" width="1024" height="600"></canvas>
+    </center>
     <script src="Main.js" type="module"></script>
 </body>
 </html>
