change online function to lobby

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -13,7 +13,7 @@
         <canvas id="gameArea" width="1024" height="600"></canvas>
         <script src="utils.js"></script>
         <script src="main-menu.js"></script>
-        <script src="tournament-menu.js"></script>
+        <script src="tournament-board.js"></script>
         <script src="players-board.js"></script>
         <script src="online-menu.js"></script>
         <script src="online-board.js"></script>
