--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+	<!-- standby-page -->
 	<div class="border-line" id="content"></div>
 	<div id="login">
 		<script type="module" src="./js/index.js"></script>
@@ -26,18 +27,22 @@
 				document.getElementById('content').style.display = 'none';
 				document.getElementById('game-page').style.display = 'block';
 			};
-  	</script>
+  		</script>
 	</div>
+
+	<!-- game-page -->
 	<div id="game-page" style="display: none;">
-		<center>
-				<canvas id="gameArea" width="1024" height="600"></canvas>
-				<script src="./js/gameUX/utils.js"></script>
-				<script src="./js/gameUX/main-menu.js"></script>
-				<script src="./js/gameUX/tournament-board.js"></script>
-				<script src="./js/gameUX/players-board.js"></script>
-				<script src="./js/gameUX/online-menu.js"></script>
-				<script src="./js/gameUX/online-board.js"></script>
-		</center>
+		<!-- <div style="background-color: bisque;"> -->
+			<center>
+					<canvas id="gameArea" width="1024" height="600"></canvas>
+					<script src="./js/gameUX/utils.js"></script>
+					<script src="./js/gameUX/main-menu.js"></script>
+					<script src="./js/gameUX/tournament-board.js"></script>
+					<script src="./js/gameUX/players-board.js"></script>
+					<script src="./js/gameUX/online-menu.js"></script>
+					<script src="./js/gameUX/online-board.js"></script>
+			</center>
+		<!-- </div> -->
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
