--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -16,6 +16,34 @@
 
 <body>
   <div class="border-line" id="content"></div>
+
+  <!-- Modal Logout -->
+  <div class="modal fade" id="logoutModal" tabindex="-1">
+    <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
+      <div class="modal-content popup-content">
+        <div class="modal-body">
+          <div class="popup-frame">
+            <div class="popup-header-icon">
+              <img src="../static/svg/alert.svg" alt="alert picture">
+            </div>
+            <h1 class="font-bs-bold fs-xl" style="color: #B63A3A;" data-i18n="confirm_logout">CONFIRM LOGOUT</h1>
+            <div class="d-flex justify-content-center popup-body">
+              <p class="font-bs fs-lg" style="color: #ffffff;" data-i18n="confirm_logout_content">
+                Oh no !!  You’re leaving........  Are you sure you want to logout from our Pong42 ?
+              </p>
+            </div>
+            <div class="d-flex justify-content-evenly popup-footer">
+              <button type="button" class="font-bs-bold btn btn-secondary bk-friend-button"
+                data-bs-dismiss="modal" data-i18n="no">No !!</button>
+              <button type="button" class="font-bs-bold btn btn-danger"
+                data-i18n="yes">Yes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
   <script src="./js/index.js" async></script>
   <script type="module" src="./js/router.js"></script>
