--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -34,7 +34,7 @@
               </p>
             </div>
             <div class="d-flex justify-content-evenly popup-footer">
-              <button type="button" class="font-bs-bold btn btn-secondary bk-friend-button"
+              <button type="button" class="font-bs-bold btn btn-secondary"
                 data-bs-dismiss="modal" data-i18n="no">No !!</button>
               <button type="button" class="font-bs-bold btn btn-danger"
                 data-i18n="yes">Yes</button>
@@ -45,44 +45,11 @@
     </div>
   </div>
 
-</body>
-
-  <!-- <script src="./js/index.js" async></script>
+  <script src="./js/index.js" async></script>
   <script type="module" src="./js/router.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script> -->
-	<!-- standby-page -->
-	<!-- <div class="border-line" id="content"></div>
-	<div id="login">
-		<script type="module" src="./js/index.js"></script>
-		<script type="module" src="./js/i18n.js"></script>
-		<script src="js/router.js"></script>
- 		<script>
-			function toGamePage(){
-				document.getElementById('content').style.display = 'none';
-				document.getElementById('game-page').style.display = 'block';
-			};
-  		</script>
-	</div> -->
+    crossorigin="anonymous"></script>
+</body>
 
-	<!-- game-page -->
-	<!-- <div id="game-page" style="display: none;"> -->
-		<!-- <div style="background-color: bisque;"> -->
-			<!-- <center>
-					<canvas id="gameArea" width="1024" height="600"></canvas>
-					<script src="./js/gameUX/utils.js"></script>
-					<script src="./js/gameUX/main-menu.js"></script>
-					<script src="./js/gameUX/tournament-board.js"></script>
-					<script src="./js/gameUX/players-board.js"></script>
-					<script src="./js/gameUX/online-menu.js"></script>
-					<script src="./js/gameUX/online-board.js"></script>
-			</center> -->
-		<!-- </div> -->
-	<!-- </div>
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-		crossorigin="anonymous"></script>
-</body> -->
 </html>
