fixed: game-page buttons are now fucntioned

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -35,12 +35,12 @@
 		<!-- <div style="background-color: bisque;"> -->
 			<center>
 					<canvas id="gameArea" width="1024" height="600"></canvas>
-					<script src="./js/gameUX/utils.js"></script>
-					<script src="./js/gameUX/main-menu.js"></script>
-					<script src="./js/gameUX/tournament-board.js"></script>
-					<script src="./js/gameUX/players-board.js"></script>
-					<script src="./js/gameUX/online-menu.js"></script>
-					<script src="./js/gameUX/online-board.js"></script>
+					<script src="./js/gameUI/utils.js"></script>
+					<script src="./js/gameUI/main-menu.js"></script>
+					<script src="./js/gameUI/tournament-board.js"></script>
+					<script src="./js/gameUI/players-board.js"></script>
+					<script src="./js/gameUI/online-menu.js"></script>
+					<script src="./js/gameUI/online-board.js"></script>
 			</center>
 		<!-- </div> -->
 	</div>
