--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -36,8 +36,10 @@
             <div class="d-flex justify-content-evenly popup-footer">
               <button type="button" class="font-bs-bold btn btn-secondary"
                 data-bs-dismiss="modal" data-i18n="no">No !!</button>
-              <button type="button" class="font-bs-bold btn btn-danger"
-                data-i18n="yes">Yes</button>
+              <a href="/login">
+                <button type="button" class="font-bs-bold btn btn-danger"
+                data-i18n="yes" id="submitLogout">Yes</button>
+              </a>
             </div>
           </div>
         </div>
