--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -16,10 +16,42 @@
 </head>
 
 <body>
-  <div class="border-line" id="content"></div>
+	<!-- standby-page -->
+	<div class="border-line" id="content"></div>
+	<div id="login">
+		<script type="module" src="./js/index.js"></script>
+		<script type="module" src="./js/i18n.js"></script>
+		<script src="js/router.js"></script>
+ 		<script>
+			function toGamePage(){
+				document.getElementById('content').style.display = 'none';
+				document.getElementById('game-page').style.display = 'block';
+			};
+  		</script>
+	</div>
 
-  <!-- Modal Logout -->
-  <div class="modal fade" id="logoutModal" tabindex="-1">
+	<!-- game-page -->
+	<div id="game-page" style="display: none;">
+		<!-- <div style="background-color: bisque;"> -->
+			<center>
+					<canvas id="gameArea" width="1024" height="600"></canvas>
+					<script src="./js/gameUI/utils.js"></script>
+					<script src="./js/gameUI/main-menu.js"></script>
+					<script src="./js/gameUI/tournament-board.js"></script>
+					<script src="./js/gameUI/players-board.js"></script>
+					<script src="./js/gameUI/online-menu.js"></script>
+					<script src="./js/gameUI/online-board.js"></script>
+			</center>
+		<!-- </div> -->
+	</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+		crossorigin="anonymous"></script>
+</body>
+
+<!-- < Modal Logout -->
+  <!-- <div class="modal fade" id="logoutModal" tabindex="-1">
     <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
       <div class="modal-content popup-content">
         <div class="modal-body">
@@ -45,13 +77,4 @@
         </div>
       </div>
     </div>
-  </div>
-
-  <script src="./js/index.js" async></script>
-  <script type="module" src="./js/router.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-</body>
-
-</html>
+  </div>/html> -->
