revert code to previous version

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -20,8 +20,7 @@
 	<div class="border-line" id="content"></div>
 	<div id="login">
 		<script type="module" src="./js/index.js"></script>
-		<script type="module" src="./js/i18n.js"></script>
-		<script src="js/router.js"></script>
+		<script type="module" src="js/router.js"></script>
  		<script>
 			function toGamePage(){
 				document.getElementById('content').style.display = 'none';
