update api profile

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -20,7 +20,7 @@
 	<div class="border-line" id="content"></div>
 	<div id="login">
 		<script type="module" src="./js/index.js"></script>
-		<script type="module" src="js/router.js"></script>
+		<script type="module" src="./js/router.js"></script>
  		<script>
 			function toGamePage(){
 				document.getElementById('content').style.display = 'none';
@@ -51,7 +51,7 @@
 </body>
 
 <!-- < Modal Logout -->
-  <!-- <div class="modal fade" id="logoutModal" tabindex="-1">
+  <div class="modal fade" id="logoutModal" tabindex="-1">
     <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
       <div class="modal-content popup-content">
         <div class="modal-body">
@@ -68,13 +68,11 @@
             <div class="d-flex justify-content-evenly popup-footer">
               <button type="button" class="font-bs-bold btn btn-secondary"
                 data-bs-dismiss="modal" data-i18n="no">No !!</button>
-              <a href="/login">
-                <button type="button" class="font-bs-bold btn btn-danger"
-                data-i18n="yes" id="submitLogout">Yes</button>
-              </a>
+							<button type="button" class="font-bs-bold btn btn-danger"
+							data-i18n="yes" id="submitLogout">Yes</button>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>/html> -->
+  </div>/html>
