added: single player to the game

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -34,12 +34,12 @@
 		<!-- <div style="background-color: bisque;"> -->
 			<center>
 					<canvas id="gameArea" width="1024" height="600"></canvas>
-					<script src="./js/gameUI/utils.js"></script>
-					<script src="./js/gameUI/main-menu.js"></script>
-					<script src="./js/gameUI/tournament-board.js"></script>
-					<script src="./js/gameUI/players-board.js"></script>
-					<script src="./js/gameUI/online-menu.js"></script>
-					<script src="./js/gameUI/online-board.js"></script>
+					<script type="module" src="./js/gameUI/utils.js"></script>
+					<script type="module" src="./js/gameUI/main-menu.js"></script>
+					<!-- <script type="module" src="./js/gameUI/tournament-board.js"></script>
+					<script type="module" src="./js/gameUI/players-board.js"></script>
+					<script type="module" src="./js/gameUI/online-menu.js"></script>
+					<script type="module" src="./js/gameUI/online-board.js"></script> -->
 					<!-- <script src="./js/gamePlay/Main.js" type="module"></script> -->
 			</center>
 		<!-- </div> -->
