--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -33,9 +33,10 @@
 	<div id="game-page" style="display: none;">
 		<!-- <div style="background-color: bisque;"> -->
 			<center>
+				<!-- disable comments to play the game -->
 					<canvas id="gameArea" width="1024" height="600"></canvas>
-					<script type="module" src="./js/gameUI/utils.js"></script>
-					<script type="module" src="./js/gameUI/main-menu.js"></script>
+					<!-- <script type="module" src="./js/gameUI/utils.js"></script>
+					<script type="module" src="./js/gameUI/main-menu.js"></script> -->
 					<!-- <script type="module" src="./js/gameUI/tournament-board.js"></script>
 					<script type="module" src="./js/gameUI/players-board.js"></script>
 					<script type="module" src="./js/gameUI/online-menu.js"></script>
