--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/modals.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -37,7 +38,7 @@
             <div class="popup-header-icon">
               <img src="../static/svg/alert.svg" alt="alert picture">
             </div>
-            <h1 class="font-bs-bold fs-xl" style="color: #B63A3A;" data-i18n="confirm_logout">CONFIRM LOGOUT</h1>
+            <h2 class="font-bs-bold fs-xl" style="color: #B63A3A;" data-i18n="confirm_logout">CONFIRM LOGOUT</h2>
             <div class="d-flex justify-content-center popup-body">
               <p class="font-bs fs-lg" style="color: #ffffff;" data-i18n="confirm_logout_content">
                 Oh no !!  You’re leaving........  Are you sure you want to logout from our Pong42 ?
@@ -48,6 +49,98 @@
                 data-bs-dismiss="modal" data-i18n="no">No !!</button>
 							<button type="button" class="font-bs-bold btn btn-danger"
 							data-i18n="yes" id="submitLogout">Yes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal Notification -->
+  <div class="modal fade" id="notificationModal" tabindex="-1">
+    <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body">
+          <div id="modal-friend-profile" class="bk-noti">
+            <div class="d-flex justify-content-center align-items-center bk-noti-title">
+              <h2 class="font-bs-bold h-md" data-i18n="friend_requests">Friend Requests</h2>
+            </div>
+            <ol class="d-flex flex-column align-items-center overflow-auto bk-noti-list scroll-custom" id="notiList">
+
+              <li class="noti-list-item">
+                <div class="d-flex align-items-center">
+                  <div class="noti-item-picture">
+                    <img id="friendProfileImage" alt="profile-picture" src="../static/svg/default-user-picture.svg">
+                  </div>
+                  <div class="d-flex flex-column">
+                    <p class="font-bs fs-lg" style="color: #A2B1B5;">SSSSSSSSSSSSSSSSSSSS</p>
+                    <p class="font-bs fs-md" style="color: #0946A6;">Wants to be your friend</p>
+                  </div>
+                </div>
+                <div class="d-flex justify-content-evenly align-items-center">
+                  <button type="button" class="font-bs-bold btn btn-secondary m-0 fs-md"
+                    data-i18n="decline"></button>
+                  <button type="button" class="font-bs-bold btn btn-primary m-0 fs-md"
+                    data-i18n="accept"></button>
+                </div>
+              </li>
+
+            </ol>
+            <div class="d-flex justify-content-evenly">
+              <button type="button" class="font-bs-bold fs-lg btn btn-primary"
+                data-bs-dismiss="modal" data-i18n="back">Back</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal Friend Profile -->
+  <div class="modal fade" id="profileModal" tabindex="-1">
+    <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body">
+          <div id="modal-friend-profile" class="bk-item bk-profile">
+            <div class="bk-profile-title">
+              <div class="d-flex justify-content-center align-items-center">
+                <div class="profile-image">
+                  <img id="friendProfileImage" alt="profile-picture">
+                </div>
+              </div>
+              <div class="d-flex flex-column align-items-center font-bs">
+                <h2 class="h-md" id="friendAvatarName"></h2>
+                <div>
+                  <img class="ic-md" src="../static/svg/email_icon.svg" alt="email icon">
+                  <p class="d-inline-block fs-lg" id="friendEmail"></p>
+                </div>
+                <p class="fs-md bio-box" id="friendBio"></p>
+              </div>
+            </div>
+            <div class="bk-profile-stat font-bs">
+              <div class="micro-item">
+                <p data-i18n="win_lose">WIN / LOSE</p>
+                <p id="friendWinLose" class="font-pixel font-stk-h3 stat"></p>
+              </div>
+              <div class="micro-item">
+                <p data-i18n="total">TOTAL</p>
+                <p id="friendTotalPlay" class="font-pixel font-stk-h3 stat"></p>
+              </div>
+              <div class="micro-item">
+                <p data-i18n="tour_won">TOURNAMENT WON</p>
+                <p id="friendTourWon" class="font-pixel font-stk-h3 stat"></p>
+              </div>
+              <div class="micro-item">
+                <p data-i18n="tour_join">TOURNAMENT JOIN</p>
+                <p id="friendTourPlay" class="font-pixel font-stk-h3 stat"></p>
+              </div>
+            </div>
+            <div class="d-flex justify-content-evenly">
+              <button type="button" class="font-bs-bold btn btn-secondary bk-friend-button"
+                data-bs-dismiss="modal" data-i18n="back">Back</button>
+              <a href="/#" class="font-bs-bold btn btn-danger bk-friend-button" data-i18n="delete_friend">Delete friend</a>
+            </div>
+            <div class="d-flex justify-content-evenly align-item">
             </div>
           </div>
         </div>
