delete print debug

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -58,7 +58,7 @@
 
   <!-- Modal Notification -->
   <div class="modal fade" id="notificationModal" tabindex="-1">
-    <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
+    <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered modal-xl">
       <div class="modal-content">
         <div class="modal-body">
           <div id="modal-friend-profile" class="bk-noti">
