Update: fetch friend list & fetch request friend

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -62,29 +62,10 @@
       <div class="modal-content">
         <div class="modal-body">
           <div id="modal-friend-profile" class="bk-noti">
-            <div class="d-flex justify-content-center align-items-center bk-noti-title">
-              <h2 class="font-bs-bold h-md" data-i18n="friend_requests">Friend Requests</h2>
+            <div class="d-flex justify-content-center align-items-center bk-noti-title modal-custom-width">
+              <h2 class="font-bs-bold h-md my-2 px-4" data-i18n="friend_requests">Friend Requests</h2>
             </div>
             <ol class="d-flex flex-column align-items-center overflow-auto bk-noti-list scroll-custom" id="notiList">
-
-              <li class="noti-list-item">
-                <div class="d-flex align-items-center">
-                  <div class="noti-item-picture">
-                    <img id="friendProfileImage" alt="profile-picture" src="../static/svg/default-user-picture.svg">
-                  </div>
-                  <div class="d-flex flex-column">
-                    <p class="font-bs fs-lg" style="color: #A2B1B5;">SSSSSSSSSSSSSSSSSSSS</p>
-                    <p class="font-bs fs-md" style="color: #0946A6;">Wants to be your friend</p>
-                  </div>
-                </div>
-                <div class="d-flex justify-content-evenly align-items-center">
-                  <button type="button" class="font-bs-bold btn btn-secondary m-0 fs-md"
-                    data-i18n="decline"></button>
-                  <button type="button" class="font-bs-bold btn btn-primary m-0 fs-md"
-                    data-i18n="accept"></button>
-                </div>
-              </li>
-
             </ol>
             <div class="d-flex justify-content-evenly">
               <button type="button" class="font-bs-bold fs-lg btn btn-primary"
