--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -61,7 +61,7 @@
     <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered modal-xl">
       <div class="modal-content">
         <div class="modal-body">
-          <div id="modal-friend-profile" class="bk-noti">
+          <div class="bk-noti">
             <div class="d-flex justify-content-center align-items-center bk-noti-title modal-custom-width">
               <h2 class="font-bs-bold h-md my-2 px-4" data-i18n="friend_requests">Friend Requests</h2>
             </div>
@@ -90,7 +90,7 @@
                 </div>
               </div>
               <div class="d-flex flex-column align-items-center font-bs">
-                <h2 class="h-md" id="friendAvatarName"></h2>
+                <h2 class="h-md" id="friendDisplayName"></h2>
                 <div>
                   <img class="ic-md" src="../static/svg/email_icon.svg" alt="email icon">
                   <p class="d-inline-block fs-lg" id="friendEmail"></p>
