Fix bug: Noti scroll bar

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -59,8 +59,8 @@
   <!-- Modal Notification -->
   <div class="modal fade" id="notificationModal" tabindex="-1">
     <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered modal-xl">
-      <div class="modal-content">
-        <div class="modal-body">
+      <div class="modal-content" style="height: 75%;">
+        <div class="modal-body d-flex h-100">
           <div class="bk-noti">
             <div class="d-flex justify-content-center align-items-center bk-noti-title modal-custom-width">
               <h2 class="font-bs-bold h-md my-2 px-4" data-i18n="friend_requests">Friend Requests</h2>
