Update: add friend

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -119,9 +119,11 @@
             <div class="d-flex justify-content-evenly">
               <button type="button" class="font-bs-bold btn btn-secondary bk-friend-button"
                 data-bs-dismiss="modal" data-i18n="back">Back</button>
-              <button type="button" class="font-bs-bold btn btn-danger bk-friend-button"
+              <button id="add-friend-btn" type="button" class="font-bs-bold btn btn-primary bk-friend-button"
+                data-i18n="add_friend" hidden></button>
+              <button id="del-friend-btn" type="button" class="font-bs-bold btn btn-danger bk-friend-button"
                 data-i18n="delete_friend" data-bs-toggle="modal"
-                data-bs-target="#deleteContactModal">Delete friend</button>
+                data-bs-target="#deleteContactModal" hidden>Delete friend</button>
             </div>
             <div class="d-flex justify-content-evenly align-item">
             </div>
