Update: add & delete friend trigger

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -120,7 +120,7 @@
               <button type="button" class="font-bs-bold btn btn-secondary bk-friend-button"
                 data-bs-dismiss="modal" data-i18n="back">Back</button>
               <button id="add-friend-btn" type="button" class="font-bs-bold btn btn-primary bk-friend-button"
-                data-i18n="add_friend" hidden></button>
+                data-i18n="add_friend" data-bs-dismiss="modal" hidden></button>
               <button id="del-friend-btn" type="button" class="font-bs-bold btn btn-danger bk-friend-button"
                 data-i18n="delete_friend" data-bs-toggle="modal"
                 data-bs-target="#deleteContactModal" hidden>Delete friend</button>
