Feature : User chat, connect chat socket Front-end to Back-end

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -56,7 +56,7 @@
     </div>
   </div>
 
-  <!-- Modal Notification -->
+  <!-- Modal Friend Notification -->
   <div class="modal fade" id="notificationModal" tabindex="-1">
     <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered modal-xl">
       <div class="modal-content" style="height: 75%;">
@@ -161,14 +161,14 @@
 
   <!-- Modal Notification Messages -->
   <div class="modal fade" id="notiMsgModal" tabindex="-1">
-    <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered modal-xl">
-      <div class="modal-content" style="height: 75%;">
-        <div class="modal-body d-flex h-100">
-          <div class="bk-noti">
+    <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
+      <div class="modal-content w-100" style="height: 75%;">
+        <div class="modal-body d-flex h-100 w-100">
+          <div class="bk-noti w-100">
             <div class="d-flex justify-content-center align-items-center bk-noti-title modal-custom-width">
               <h2 class="font-bs-bold h-md my-2 px-4" data-i18n="direct_messages">Direct Messages</h2>
             </div>
-            <ol class="d-flex flex-column align-items-center overflow-auto bk-noti-list scroll-custom" id="notiList">
+            <ol class="d-flex flex-column align-items-center overflow-auto bk-noti-list scroll-custom" id="notiMsgList">
             </ol>
             <div class="d-flex justify-content-evenly">
               <button type="button" class="font-bs-bold fs-lg btn btn-primary"
