--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -234,4 +234,29 @@
 		</div>
 	</div>	
 
+	<!-- Modal Winner Tournament -->
+	<div class="modal fade" id="winnerTourModal" tabindex="-1" data-bs-backdrop="static">
+		<div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
+			<div class="modal-content popup-content">
+				<div class="modal-body">
+					<div class="popup-frame">
+						<h1 class="font-bs text-center fs-xxl m-2" style="color: #fff;" data-i18n="winner_tour">the winner tournament</h1>
+						<div class="d-flex flex-column align-items-center justify-content-center popup-body w-100">
+              <div class="crownTour">
+                <img src="/static/svg/crown.svg" alt="ribbon">
+              </div>
+              <div class="bk-ribbonTour">
+                <p id="winnerName" class="font-bs fs-lg" style="color: #629DD2;"></p>
+              </div>
+						</div>
+						<div class="d-flex justify-content-around popup-footer w-100">
+              <button type="button" class="btn btn-secondary font-bs-bold mb-0"
+                data-i18n="close" data-bs-dismiss="modal">Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </html>
