Update winner tour

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -246,7 +246,7 @@
                 <img src="/static/svg/crown.svg" alt="ribbon">
               </div>
               <div class="bk-ribbonTour">
-                <p id="winnerName" class="font-bs fs-lg" style="color: #629DD2;"></p>
+                <p id="winnerTourName" class="font-bs fs-lg" style="color: #629DD2;"></p>
               </div>
 						</div>
 						<div class="d-flex justify-content-around popup-footer w-100">
