Update: Display player name before start tournament

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -259,4 +259,25 @@
 		</div>
 	</div>
 
+  <!-- Modal Info Player Tournament -->
+  <div class="modal fade" id="infoTour" tabindex="-1" data-bs-backdrop="static">
+    <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
+      <div class="modal-content popup-content">
+        <div class="modal-body">
+            <div class="grid-info-player">
+              <div>
+                <p id="player1" class="font-bs fs-xl" style="color: #629DD2;">Player1</p>
+              </div>
+              <div>
+                <img class="pingpong-racket-vs" src="../static/svg/Table tennis.svg" alt="Table tennis image">
+              </div>
+              <div>
+                <p id="player2" class="font-bs fs-xl" style="color: #629DD2;">Player2</p>
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </html>
